--- a/app-back/app-back-nginx.conf
+++ b/app-back/app-back-nginx.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location / {
-        proxy_pass http://covid19-app-back;
+        proxy_pass http://app-back;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
