--- a/app-back/docker-compose.yml
+++ b/app-back/docker-compose.yml
@@ -1,41 +1,43 @@
-version: '2'
+version: '3.7'
 
 services:
-
-
   app-back-nginx:
-    image: nginx
+    image: nginx:${nginx_version}
     ports:
-      - 80:80
+      - ${nginx_port}:80
     volumes:
       - ./app-back-nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - /mnt/app-back/:/app/
-        # - static:/mnt/covid19-rest/static/
+    links:
+      - app-back-django
     depends_on:
-      - covid19-rest-django
+      - app-back-django
 
   app-back-django:
     build:
       context: .
-      dockerfile: Dockerfile.django
+      dockerfile: Dockerfile
+      target: ${target_env}
       args:
-        branch: master
-        #depends_on:
-        #- covid19-rest-rabbitmq
-        #- covid19-rest-postgres
+        branch: ${branch}
+        repository: ${repository}
+        folder: ${folder_app}
+    environment:
+      - APP_PATH:"/app/app-back"
     volumes:
       - /mnt/app-back/:/app/
-        # - static:/mnt/covid19-rest/static/
     ports:
-      - 8000:8000
+      - ${app_port}:8000
 
 
   app-back-celery-worker:
     build:
       context: .
-      dockerfile: Dockerfile.django
+      dockerfile: Dockerfile
+      target: ${target_env}
       args:
-        branch: master
+        branch: ${branch}
+        repository: ${repository}
     depends_on:
       - app-back-rabbitmq
     volumes:
@@ -46,9 +48,11 @@ services:
   app-back-celery-beat:
     build:
       context: .
-      dockerfile: Dockerfile.django
+      dockerfile: Dockerfile
+      target: ${target_env}
       args:
-        branch: master
+        branch: ${branch}
+        repository: ${repository}
     depends_on:
       - app-back-rabbitmq
     volumes:
@@ -56,24 +60,20 @@ services:
     entrypoint: ['celery', 'beat', '--app=app-back', '--schedule=/tmp/celery-beat.scheduler', '--loglevel=INFO', '--logfile=/tmp/celerybeat.log', '--pidfile=/tmp/celery-beat.pid']
 
   app-back-postgres:
-    image: postgres:latest
+    image: postgres:${version_postgres}
     environment:
-      POSTGRES_USER: covid-app-back
-      POSTGRES_PASSWORD: covid-app-back
-      POSTGRES_DB: covid-app-back
+      POSTGRES_USER: ${user_postgres}
+      POSTGRES_PASSWORD: ${pass_postgres}
+      POSTGRES_DB: ${db_postgres}
       PGDATA: /data/postgres
     volumes:
        - /mnt/postgres-data/:/data/postgres
 
   app-back-rabbitmq:
-    image: rabbitmq:3.6
-    hostname: app-back-rabbitmq
+    image: rabbitmq:${version_rabbit}
+    hostname: ${hostname_rabbit}
     environment:
-      - RABBITMQ_DEFAULT_USER=covid19-app-back
-      - RABBITMQ_DEFAULT_PASS=covid19-app-back
+      - RABBITMQ_DEFAULT_USER=${user_rabbit}
+      - RABBITMQ_DEFAULT_PASS=${pass_rabbit}
     volumes:
       - /mnt/rabbitmq-data/:/var/lib/rabbitmq
-
-volumes:
-  static:
-  media:
