--- a/app-back/docker-compose.yml
+++ b/app-back/docker-compose.yml
@@ -24,8 +24,8 @@ services:
         folder: ${folder_app}
     environment:
       - APP_PATH:"/app/app-back"
-    #volumes:
-    #  - /mnt/dockerfiles/app-back/:/app/
+    volumes:
+      - /mnt/dockerfiles/app-back/:/app/
     ports:
       - ${app_port}:8000
 
